backend/errs.txt
Listing 'app'...
Listing 'app\\models'...
Listing 'app\\routers'...
Compiling 'app\\routers\\alerts.py'...
*** Sorry: IndentationError: unexpected indent (alerts.py, line 27)
Compiling 'app\\routers\\dashboard.py'...
***   File "app\routers\dashboard.py", line 11
    return {
           ^
SyntaxError: '{' was never closed

Compiling 'app\\routers\\insights.py'...
***   File "app\routers\insights.py", line 15
    return {
           ^
SyntaxError: '{' was never closed

Listing 'app\\schemas'...
Listing 'app\\services'...
Compiling 'app\\services\\alert_service.py'...
***   File "app\services\alert_service.py", line 10
    alert = Alert(
                 ^
SyntaxError: '(' was never closed

Compiling 'app\\services\\recommendation_engine.py'...
***   File "app\services\recommendation_engine.py", line 11
    "High code churn": "split deployment",
                     ^
SyntaxError: invalid syntax

Compiling 'app\\services\\risk_engine.py'...
*** Sorry: IndentationError: expected an indented block after 'if' statement on line 93 (risk_engine.py, line 95)
